--- a/EVTCAnalytics/EVTCAnalytics.csproj
+++ b/EVTCAnalytics/EVTCAnalytics.csproj
@@ -107,7 +107,7 @@
     <Compile Include="Parsed\ParsedLog.cs" />
     <Compile Include="Parsed\ParsedSkill.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StatisticsCalculator.cs" />
+    <Compile Include="LogAnalyser.cs" />
     <Compile Include="Statistics\Buffs\AgentBuffData.cs" />
     <Compile Include="Statistics\Buffs\BuffData.cs" />
     <Compile Include="Statistics\Buffs\BuffSimulationType.cs" />
