--- a/EVTCAnalytics/EVTCAnalytics.csproj
+++ b/EVTCAnalytics/EVTCAnalytics.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -81,6 +81,7 @@
     <Compile Include="LogProcessor.cs" />
     <Compile Include="EVTCParser.cs" />
     <Compile Include="Model\Agents\Agent.cs" />
+    <Compile Include="Model\Agents\AttackTarget.cs" />
     <Compile Include="Model\Agents\EliteSpecialization.cs" />
     <Compile Include="Model\Agents\Gadget.cs" />
     <Compile Include="Model\Agents\NPC.cs" />
