Analytics: Add success detection for Deimos

--- a/EVTCAnalytics/EVTCAnalytics.csproj
+++ b/EVTCAnalytics/EVTCAnalytics.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -66,6 +66,7 @@
     <Compile Include="GameData\Detections\InitialBuffDetection.cs" />
     <Compile Include="GameData\Detections\SelfBuffApplyDetection.cs" />
     <Compile Include="GameData\GadgetIds.cs" />
+    <Compile Include="GameData\GameBuilds.cs" />
     <Compile Include="GameData\GameSkillDataRepository.cs" />
     <Compile Include="GameData\SkillIds.cs" />
     <Compile Include="GameData\SpecializationDetection.cs" />
@@ -148,6 +149,8 @@
     <Compile Include="Statistics\Encounters\Results\EncounterResult.cs" />
     <Compile Include="Statistics\Encounters\Results\GroupedEventDeterminer.cs" />
     <Compile Include="Statistics\Encounters\Results\IResultDeterminer.cs" />
+    <Compile Include="Statistics\Encounters\Results\RewardDeterminer.cs" />
+    <Compile Include="Statistics\Encounters\Results\TargetableDeterminer.cs" />
     <Compile Include="Statistics\IEncounterFinder.cs" />
     <Compile Include="Statistics\IRotationCalculator.cs" />
     <Compile Include="Statistics\LogStatistics.cs" />
