Inspector: Add a rudimentary filter for buff IDs

--- a/EVTCInspector/EVTCInspector.csproj
+++ b/EVTCInspector/EVTCInspector.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="AgentControl.cs" />
     <Compile Include="ApiDataSection.cs" />
+    <Compile Include="EventContentFilterControl.cs" />
     <Compile Include="EventFilters.cs" />
     <Compile Include="EventListControl.cs" />
     <Compile Include="GridViewSorter.cs" />
