--- a/ArcdpsLogManager/ArcdpsLogManager.csproj
+++ b/ArcdpsLogManager/ArcdpsLogManager.csproj
@@ -1,167 +1,25 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{909DE828-0610-473B-BE74-CE683C621CDC}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <TargetFramework>net472</TargetFramework>
     <RootNamespace>GW2Scratch.ArcdpsLogManager</RootNamespace>
     <AssemblyName>GW2Scratch.ArcdpsLogManager</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <OutputType>WinExe</OutputType>
     <LangVersion>latest</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <Title>arcdps Log Manager</Title>
+    <Version>0.3</Version>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AtkSharp, Version=3.22.24.29, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\AtkSharp.3.22.24.29\lib\netstandard2.0\AtkSharp.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="CairoSharp, Version=3.22.24.29, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\CairoSharp.3.22.24.29\lib\netstandard2.0\CairoSharp.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Eto, Version=2.4.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Eto.Forms.2.4.1\lib\netstandard1.0\Eto.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Eto.Gtk, Version=2.4.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Eto.Platform.Gtk.2.4.1\lib\netstandard2.0\Eto.Gtk.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Eto.Wpf, Version=2.4.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Eto.Platform.Wpf.2.4.1\lib\net45\Eto.Wpf.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="GdkSharp, Version=3.22.24.29, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\GdkSharp.3.22.24.29\lib\netstandard2.0\GdkSharp.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="GioSharp, Version=3.22.24.29, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\GioSharp.3.22.24.29\lib\netstandard2.0\GioSharp.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="GLibSharp, Version=3.22.24.29, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\GLibSharp.3.22.24.29\lib\netstandard2.0\GLibSharp.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="GtkSharp, Version=3.22.24.29, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\GtkSharp.3.22.24.29\lib\netstandard2.0\GtkSharp.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="mscorlib" />
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="PangoSharp, Version=3.22.24.29, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\PangoSharp.3.22.24.29\lib\netstandard2.0\PangoSharp.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Plugin.Settings, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Xam.Plugins.Settings.4.0.0.10-beta\lib\net45\Plugin.Settings.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="RestSharp, Version=106.5.4.0, Culture=neutral, PublicKeyToken=598062e77f915f75">
-      <HintPath>..\packages\RestSharp.106.5.4\lib\net452\RestSharp.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <HintPath>..\..\..\..\..\..\..\..\usr\lib\mono\xbuild\Microsoft\Microsoft.NET.Build.Extensions\net471\lib\System.Net.Http.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Runtime.Serialization.Primitives, Version=4.1.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <HintPath>..\packages\System.Runtime.Serialization.Primitives.4.3.0\lib\net46\System.Runtime.Serialization.Primitives.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Web" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Eto.Forms" Version="2.4.1" />
+    <PackageReference Include="Eto.Platform.Gtk" Version="2.4.1" />
+    <PackageReference Include="Eto.Platform.Wpf" Version="2.4.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="RestSharp" Version="106.6.10" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="Xam.Plugins.Settings" Version="4.1.0-beta" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\About.cs" />
-    <Compile Include="Controls\GroupCompositionControl.cs" />
-    <Compile Include="Controls\GuildDetailPanel.cs" />
-    <Compile Include="Controls\LogDetailPanel.cs" />
-    <Compile Include="Controls\MultipleLogPanel.cs" />
-    <Compile Include="Controls\PlayerDetailPanel.cs" />
-    <Compile Include="Controls\BackgroundProcessorDetail.cs" />
-    <Compile Include="Data\ApiData.cs" />
-    <Compile Include="Data\BackgroundProcessor.cs" />
-    <Compile Include="Data\IBackgroundProcessor.cs" />
-    <Compile Include="Data\LogCache.cs" />
-    <Compile Include="Data\UploadProcessor.cs" />
-    <Compile Include="Dialogs\ApiDialog.cs" />
-    <Compile Include="Dialogs\CacheDialog.cs" />
-    <Compile Include="SettingsForm.cs" />
-    <Compile Include="GameData.cs" />
-    <Compile Include="GridViewSorter.cs" />
-    <Compile Include="GW2Api\V2\ApiGuild.cs" />
-    <Compile Include="GW2Api\V2\GuildEndpoint.cs" />
-    <Compile Include="ImageProvider.cs" />
-    <Compile Include="LoadingForm.cs" />
-    <Compile Include="Logs\LogUpload.cs" />
-    <Compile Include="Logs\LogFinder.cs" />
-    <Compile Include="Logs\LogData.cs" />
-    <Compile Include="Logs\LogPlayer.cs" />
-    <Compile Include="Logs\ParsingStatus.cs" />
-    <Compile Include="Logs\UploadState.cs" />
-    <Compile Include="ManagerForm.cs" />
-    <Compile Include="Analytics\LogAnalytics.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\Annotations.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources.cs" />
-    <Compile Include="Sections\AdvancedFilters.cs" />
-    <Compile Include="Sections\DebugData.cs" />
-    <Compile Include="Sections\GameDataGathering.cs" />
-    <Compile Include="Sections\GuildList.cs" />
-    <Compile Include="Sections\Guilds\GuildCharacter.cs" />
-    <Compile Include="Sections\Guilds\GuildData.cs" />
-    <Compile Include="Sections\Guilds\GuildMember.cs" />
-    <Compile Include="Sections\LogList.cs" />
-    <Compile Include="Sections\PlayerList.cs" />
-    <Compile Include="Sections\Players\PlayerData.cs" />
-    <Compile Include="Sections\Statistics.cs" />
-    <Compile Include="Settings.cs" />
-    <Compile Include="Timing\Cooldown.cs" />
-    <Compile Include="Uploaders\DpsReportResponse.cs" />
-    <Compile Include="Uploaders\DpsReportUploader.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\EVTCAnalytics\EVTCAnalytics.csproj">
-      <Project>{9dd47a76-3c69-4152-aa36-b656caffdecb}</Project>
-      <Name>EVTCAnalytics</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\EVTCInspector\EVTCInspector.csproj">
-      <Project>{cb188f27-d853-4167-9693-ae4c8890be70}</Project>
-      <Name>EVTCInspector</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\EVTCAnalytics\EVTCAnalytics.csproj" />
+    <ProjectReference Include="..\EVTCInspector\EVTCInspector.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\Berserker_tango_icon_20px.png">
@@ -249,19 +107,4 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Eto.Forms.2.4.1\build\Eto.Forms.targets" Condition="Exists('..\packages\Eto.Forms.2.4.1\build\Eto.Forms.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105.The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Eto.Forms.2.4.1\build\Eto.Forms.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Eto.Forms.2.4.1\build\Eto.Forms.targets'))" />
-  </Target>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-           Other similar extension points exist, see Microsoft.Common.targets.
-      <Target Name="BeforeBuild">
-      </Target>
-      <Target Name="AfterBuild">
-      </Target>
-      -->
 </Project>
