Add generated files from Fody to the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -435,3 +435,6 @@ fabric.properties
 .history
 
 # End of https://www.gitignore.io/api/rider,csharp,visualstudio,visualstudiocode
+
+# Fody
+*/FodyWeavers.xsd
