--- a/EVTCAnalytics.Tests/EVTCAnalytics.Tests.csproj
+++ b/EVTCAnalytics.Tests/EVTCAnalytics.Tests.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="GameData\Encounters\EncounterCategoryTests.cs" />
     <Compile Include="GameData\Encounters\EncounterNameTests.cs" />
+    <Compile Include="GameData\CharactersTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Statistics\Buffs\IntensityBuffStackCollectionTests.cs" />
   </ItemGroup>
