--- a/EVTCAnalytics.LogTests/EVTCAnalytics.LogTests.csproj
+++ b/EVTCAnalytics.LogTests/EVTCAnalytics.LogTests.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net472</TargetFramework>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
         <RootNamespace>EVTCAnalytics.LogTests</RootNamespace>
         <AssemblyName>EVTCAnalytics.LogTests</AssemblyName>
         <OutputType>WinExe</OutputType>
