Update all projects to use .NET Core
This requires having individual projects for GTK and WPF versions.

--- a/EVTCAnalytics.LogTests/EVTCAnalytics.LogTests.csproj
+++ b/EVTCAnalytics.LogTests/EVTCAnalytics.LogTests.csproj
@@ -3,9 +3,8 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <RootNamespace>GW2Scratch.EVTCAnalytics.LogTests</RootNamespace>
         <AssemblyName>GW2Scratch.EVTCAnalytics.LogTests</AssemblyName>
-        <OutputType>WinExe</OutputType>
+        <OutputType>Exe</OutputType>
         <LangVersion>latest</LangVersion>
-        <Version>0.6</Version>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
