--- a/EVTCInspector.Gtk/EVTCInspector.Gtk.csproj
+++ b/EVTCInspector.Gtk/EVTCInspector.Gtk.csproj
@@ -3,6 +3,8 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <RootNamespace>GW2Scratch.EVTCInspector.Gtk</RootNamespace>
+        <AssemblyName>GW2Scratch.EVTCInspector.Gtk</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
