--- a/EVTCAnalytics.LogTests.LocalSets/EVTCAnalytics.LogTests.LocalSets.csproj
+++ b/EVTCAnalytics.LogTests.LocalSets/EVTCAnalytics.LogTests.LocalSets.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     </ItemGroup>
     <ItemGroup>
+        <ProjectReference Include="..\EVTCAnalytics.LogTests\EVTCAnalytics.LogTests.csproj" />
         <ProjectReference Include="..\EVTCAnalytics\EVTCAnalytics.csproj" />
     </ItemGroup>
 </Project>
