Manager: New versioning scheme, adds a revision
This version scheme most notably avoids an update window
always showing up for developmental versions, we now
differentiate versions with Analytics changes

--- a/ArcdpsLogManager/ArcdpsLogManager.csproj
+++ b/ArcdpsLogManager/ArcdpsLogManager.csproj
@@ -5,7 +5,15 @@
     <AssemblyName>GW2Scratch.ArcdpsLogManager</AssemblyName>
     <LangVersion>latest</LangVersion>
     <Title>arcdps Log Manager</Title>
-    <Version>0.7.2</Version>
+    <!--
+      The last value in the version is used to differentiate analytics versions.
+      This is useful when developing a new version of the manager and some analytics have changed,
+      requiring logs to be reprocessed. Without this, we wouldn't be able to detect
+      a log has already been reprocessed during development.
+      Each new log data update causes a revision increase.
+      See LogDataUpdater for the updates.
+    -->
+    <Version>1.0.0.0</Version>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Eto.Forms" Version="2.5.3" />
