Move all tests into a separate directory

--- a/Tests/EVTCAnalytics.LogTests.EliteInsights/EVTCAnalytics.LogTests.EliteInsights.csproj
+++ b/Tests/EVTCAnalytics.LogTests.EliteInsights/EVTCAnalytics.LogTests.EliteInsights.csproj
@@ -13,7 +13,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\EVTCAnalytics.LogTests\EVTCAnalytics.LogTests.csproj" />
-        <ProjectReference Include="..\EVTCAnalytics\EVTCAnalytics.csproj" />
+        <ProjectReference Include="..\..\EVTCAnalytics\EVTCAnalytics.csproj" />
         <ProjectReference Include="..\EI\GW2EIEvtcParser\GW2EIEvtcParser.csproj" />
     </ItemGroup>
     
