--- a/Tests/EVTCAnalytics.Tests/EVTCAnalytics.Tests.csproj
+++ b/Tests/EVTCAnalytics.Tests/EVTCAnalytics.Tests.csproj
@@ -12,6 +12,6 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\EVTCAnalytics\EVTCAnalytics.csproj" />
+    <ProjectReference Include="..\..\EVTCAnalytics\EVTCAnalytics.csproj" />
   </ItemGroup>
 </Project>
