--- a/Tests/EVTCAnalytics.LogTests/EVTCAnalytics.LogTests.csproj
+++ b/Tests/EVTCAnalytics.LogTests/EVTCAnalytics.LogTests.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\EVTCAnalytics\EVTCAnalytics.csproj" />
+      <ProjectReference Include="..\..\EVTCAnalytics\EVTCAnalytics.csproj" />
     </ItemGroup>
 
 </Project>
