Log Tests: Fix wrong project reference after directory move

--- a/Tests/EVTCAnalytics.LogTests.LocalSets/EVTCAnalytics.LogTests.LocalSets.csproj
+++ b/Tests/EVTCAnalytics.LogTests.LocalSets/EVTCAnalytics.LogTests.LocalSets.csproj
@@ -11,6 +11,6 @@
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\EVTCAnalytics.LogTests\EVTCAnalytics.LogTests.csproj" />
-        <ProjectReference Include="..\EVTCAnalytics\EVTCAnalytics.csproj" />
+        <ProjectReference Include="..\..\EVTCAnalytics\EVTCAnalytics.csproj" />
     </ItemGroup>
 </Project>
