--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -17,6 +17,10 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.301
+    # This is a workaround for issue https://github.com/actions/virtual-environments/issues/1090,
+    # which causes to nuget restores to fail
+    - name: Clean NuGet cache
+      run: dotnet nuget locals all --clear
     - name: Build
       run: dotnet build --configuration Release
     - name: Test
