Log Manager: Use new control styles on WPF
Adds a manifest as this is not a default with WPF.

There are some weird issues with it not being applied when launching from an IDE, but it does work correctly when packaged with dotnet publish.

--- a/ArcdpsLogManager.Wpf/ArcdpsLogManager.Wpf.csproj
+++ b/ArcdpsLogManager.Wpf/ArcdpsLogManager.Wpf.csproj
@@ -8,10 +8,19 @@
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <ApplicationManifest>app.manifest</ApplicationManifest>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="Eto.Platform.Wpf" Version="2.5.8" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\ArcdpsLogManager\ArcdpsLogManager.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+        <None Update="app.manifest">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 </Project>
