--- a/ArcdpsLogManager.Gtk/ArcdpsLogManager.Gtk.csproj
+++ b/ArcdpsLogManager.Gtk/ArcdpsLogManager.Gtk.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Eto.Platform.Gtk" Version="2.5.10" />
+      <PackageReference Include="Eto.Platform.Gtk" Version="2.5.11-ci-20210413.746270315" />
     </ItemGroup>
 
     <ItemGroup>
