--- a/EVTCInspector/EVTCInspector.csproj
+++ b/EVTCInspector/EVTCInspector.csproj
@@ -10,7 +10,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Eto.Forms" Version="2.5.10" />
+    <PackageReference Include="Eto.Forms" Version="2.5.11-ci-20210413.746270315" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
   <ItemGroup>
