--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,13 @@
 indent_style=tab
 indent_size=tab
 tab_width=4
+csharp_new_line_before_open_brace = methods, properties, control_blocks, types
+csharp_new_line_before_else = true
+csharp_new_line_before_catch = true
+csharp_new_line_before_finally = true
+csharp_new_line_before_members_in_anonymous_types = true
+csharp_new_line_between_query_expression_clauses = true
+csharp_new_line_before_members_in_object_initializers=false
 
 [*.{appxmanifest,asax,ascx,aspx,build,cshtml,dtd,fs,fsi,fsscript,fsx,master,ml,mli,nuspec,razor,resw,resx,skin,vb,xaml,xamlx,xoml,xsd}]
 indent_style=space
@@ -12,7 +19,6 @@ tab_width=4
 [*]
 
 # Microsoft .NET properties
-csharp_new_line_before_members_in_object_initializers=false
 csharp_preferred_modifier_order=public, private, protected, internal, new, abstract, virtual, sealed, override, static, readonly, extern, unsafe, volatile, async:suggestion
 csharp_style_var_elsewhere=true:hint
 csharp_style_var_for_built_in_types=false:hint
