GH Actions: use separate directories for PDBs
This should avoid file conflicts that made mv fail because a file already existed (no idea why it only started being an issue now).

--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -49,12 +49,17 @@ jobs:
     # Same thing for console projects that are aimed at different runtime platforms.
     - name: Bundle PDBs
       run: |
-          mkdir artifacts/pdb/
-          mv artifacts/manager/win64/*.pdb artifacts/pdb/
-          mv artifacts/manager/linux64/*.pdb artifacts/pdb/
-          mv artifacts/inspector/win64/*.pdb artifacts/pdb/
-          mv artifacts/inspector/linux64/*.pdb artifacts/pdb/
-          mv artifacts/rotcomp/win64/*.pdb artifacts/pdb/
+          mkdir -p artifacts/pdb/manager/win64/
+          mkdir -p artifacts/pdb/manager/linux64/
+          mkdir -p artifacts/pdb/inspector/win64/
+          mkdir -p artifacts/pdb/inspector/linux64/
+          mkdir -p artifacts/pdb/rotcomp/win64/
+          mkdir -p artifacts/pdb/manager/win64/
+          mv artifacts/manager/win64/*.pdb artifacts/pdb/manager/win64/
+          mv artifacts/manager/linux64/*.pdb artifacts/pdb/manager/linux64/
+          mv artifacts/inspector/win64/*.pdb artifacts/pdb/inspector/win64/
+          mv artifacts/inspector/linux64/*.pdb artifacts/pdb/inspector/linux64/
+          mv artifacts/rotcomp/win64/*.pdb artifacts/pdb/rotcomp/win64/
     - name: Prettify executable filenames
       run: |
           mv artifacts/manager/win64/GW2Scratch.ArcdpsLogManager.Wpf.exe artifacts/manager/win64/ArcdpsLogManager.exe
